Добавлена поддержка смены пароля на серверной части через GET запросы.

--- a/components/addmc.html
+++ b/components/addmc.html
@@ -97,6 +97,30 @@
     </div>
 </form>
 <div class="col-xs-12 text-center">
+    <div class="uc_weather uc_title">Монстр активен при:</div>
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
+        <button class="btn btn-success btn-block disabled"><span class="fa fa-lg fa-fw fa-sun-o"></span>Солнечно</button>
+        <button class="btn btn-danger btn-block disabled"><span class="fa fa-lg fa-fw fa-bolt"></span>Гроза</button>
+        <button class="btn btn-danger btn-block disabled"><span class="fa fa-lg fa-fw fa-heartbeat"></span>Страх</button>
+        <button class="btn btn-success btn-block disabled"><span class="fa fa-lg fa-fw fa-bus"></span>На автобусе</button>
+        <button class="btn btn-warning btn-block disabled"><span class="fa fa-lg fa-fw fa-calendar"></span>Дела</button>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
+        <button class="btn btn-success btn-block disabled"><span class="fa fa-lg fa-fw fa-cloud"></span>Облачно</button>
+        <button class="btn btn-danger btn-block disabled"><span class="fa fa-lg fa-fw fa-soundcloud"></span>Туман</button>
+        <button class="btn btn-success btn-block disabled"><span class="fa fa-lg fa-fw fa-home"></span>Дома</button>
+        <button class="btn btn-warning btn-block disabled"><span class="fa fa-lg fa-fw fa-cab"></span>На такси</button>
+        <button class="btn btn-success btn-block disabled"><span class="fa fa-lg fa-fw fa-commenting"></span>Свободен</button>
+    </div>
+    <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
+        <button class="btn btn-warning btn-block disabled"><span class="fa fa-lg fa-fw fa-deaf"></span>Шумно</button>
+        <button class="btn btn-danger btn-block disabled"><span class="fa fa-lg fa-fw fa-asterisk"></span>Снег</button>
+        <button class="btn btn-warning btn-block disabled"><span class="fa fa-lg fa-fw fa-car"></span>На машине</button>
+        <button class="btn btn-warning btn-block disabled"><span class="fa fa-lg fa-fw fa-map"></span>В поездке</button>
+        <button class="btn btn-success btn-block disabled"><span class="fa fa-lg fa-fw fa-cutlery"></span>Ем</button>
+    </div>
+</div>
+<div class="col-xs-12 text-center">
     <button id="mc_btnsub" class="btn btn-success btn-group-sm">Добавить</button>
     <button id="mc_btncancel" class="btn btn-danger btn-group-sm">Отмена</button>
 </div>
