--- a/components/menu.html
+++ b/components/menu.html
@@ -1,4 +1,4 @@
-<div class="btn-group-xs">
+<div class="btn-group-sm">
     <button class="btnlogin btn btn-success">Войти</button>
     <button class="btn btn-default disabled hidden">Обновить список</button>
     <button class="btn btn-default disabled hidden">Анализ списка</button>
