Добавлена кнопка выход и отмена авторизации

--- a/components/menuadmin.html
+++ b/components/menuadmin.html
@@ -1,5 +1,5 @@
 <div class="btn-group-sm">
-    <button class="btnlogin btn btn-success">Войти</button>
+    <button class="btnlogout btn btn-default">Выйти</button>
     <button class="btn btn-default disabled hidden">Обновить список</button>
     <button class="btn btn-default disabled hidden">Анализ списка</button>
     <button class="btnadmintools btn btn-danger">AdminTools</button>
