--- a/style/dark.css
+++ b/style/dark.css
@@ -182,15 +182,17 @@ body{
     background-size: cover;
     box-shadow: 0 0 5px 3px rgba(250,250,250,0.8);
 }
+
 .user_card_desc{
     height: 50px;
 }
 h2.card_title{
-    font-size: 30px;
+    font-size: 26px;
     margin-top: 8px;
     line-height: 20px;
     color: white;
     font-family: 'Josefin Sans', sans-serif;
+    text-transform: uppercase;
 }
 h3.card_status{
     font-size: 15px;
@@ -215,7 +217,18 @@ h3.card_status_off{
     line-height: 15px;
     font-family: 'Josefin Sans', sans-serif;
     font-size: 90%;
+    text-align: center;
 }
+.code_f {
+    position: absolute;
+    top: 2px;
+    left: 0px;
+    height: 50px;
+    line-height: 15px;
+    font-family: 'Josefin Sans', sans-serif;
+    font-size: 90%;
+    text-align: center;
+ }
 .emo_up{
     color: greenyellow;
     text-shadow: 0 0 5px rgba(50,255,50,0.5);
@@ -228,6 +241,15 @@ h3.card_status_off{
     color: #fff;
 }
 #usercard{
+    margin-top: 15px;
+    padding-right: 0px;
+    padding-left: 0px;
+    padding-bottom: 15px;
+    border-top: black solid 2px;
+    font-family: 'Quicksand', sans-serif;
+
+}
+#usercard-g{
     margin-top: 15px;
     padding-right: 0px;
     padding-left: 0px;
@@ -250,6 +272,7 @@ h3.card_status_off{
     padding-left: 0;
     padding-right: 0;
     height: 100%;
+    padding-top: 15px;
 }
 .uc_photo{
     height: 150px;
@@ -268,9 +291,9 @@ h3.card_status_off{
 .test{
     border:1px solid red;
 }
-#uc_emo{
+.uc_emo_slider{
     margin: 15px auto;
-    height: 145px;
+    height: 170px !important;
 }
 .uc_emocontrol{
     padding: 0px;
@@ -298,7 +321,7 @@ h3.card_status_off{
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bfd255', endColorstr='#9ecb2d',GradientType=0 ); /* IE6-9 */
 
 }
-#uc_emo_val{
+.uc_emo_val{
     text-align: center;
 }
 .uc_weather{
@@ -329,4 +352,43 @@ h3.card_status_off{
 }
 .sys_ok{
     background: #1e9126;
+}
+.code_off {
+    opacity: 0.3;
+}
+.red_code {
+    color: red;
+    font-weight: bold;
+}
+.orange_code {
+    color: orange;
+    font-weight: bold;
+}
+.green_code {
+     color: greenyellow;
+     font-weight: bold;
+ }
+.uc_code {
+    font-size: 9px;
+    font-family: sans-serif;
+}
+.uc_played{
+
+}
+.uc_status_code{
+    color: white;
+}
+#tooltip {
+    z-index: 9999;
+    position: absolute;
+    display: none;
+    top:0px;
+    left:0px;
+    background-color: #fff;
+    padding: 5px 10px 5px 10px;
+    color: grey;
+    opacity: 0.8;
+}
+.label-disabled{
+    opacity: 0.4;
 }
