--- a/components/menupda.html
+++ b/components/menupda.html
@@ -1,3 +1,3 @@
 <button class="btnlogin btn btn-success btn-block">Войти</button>
-<button class="btn btn-default btn-block disabled">Обновить список</button>
-<button class="btn btn-default btn-block disabled">Анализ списка</button>
+<button class="btn btn-default btn-block disabled hidden">Обновить список</button>
+<button class="btn btn-default btn-block disabled hidden">Анализ списка</button>
