--- a/components/menupdaadmin.html
+++ b/components/menupdaadmin.html
@@ -1,4 +1,4 @@
 <button class="btnlogout btn btn-default btn-block">Выйти</button>
-<button class="btn btn-default btn-block disabled">Обновить список</button>
-<button class="btn btn-default btn-block disabled">Анализ списка</button>
+<button class="btn btn-default btn-block disabled hidden">Обновить список</button>
+<button class="btn btn-default btn-block disabled hidden">Анализ списка</button>
 <button class="btnadmintools btn btn-danger btn-block">AdminTools</button>
