добавлена функция добавления статуса на тренд, начата работа над погодным виджетом, исправлены некоторые баги

--- a/style/dark.css
+++ b/style/dark.css
@@ -416,3 +416,11 @@ h3.card_status_off{
     font-size: 80%;
     color: white;
 }
+.beenonline{
+    font-size: 11px;
+    color: #aaa;
+}
+.weather_desc{
+    height: 50px;
+
+}
