geo subsystem active, private data active

--- a/components/menuadmin.html
+++ b/components/menuadmin.html
@@ -2,5 +2,6 @@
     <button class="btnlogout btn btn-default">Выйти</button>
     <button class="btn btn-default disabled hidden">Обновить список</button>
     <button class="btn btn-default disabled hidden">Анализ списка</button>
+    <button class="btn btn-default btn-privatelog">Лог посещений</button>
     <button class="btnadmintools btn btn-danger">AdminTools</button>
 </div>
