--- a/style/dark.css
+++ b/style/dark.css
@@ -1,14 +1,21 @@
 @import "http://webfonts.ru/import/gardensc.css";
 
 .headerdark{
-    background-color: #464646;
+    background-color: #313131;
+    background-image: url("bg.jpg");
     margin-left: 0;
     margin-right: 0;
     padding-left: 0;
     padding-right: 0;
-    color: #bbb;
+    color: #E0E0E0;
     text-shadow: 0 0 5px rgba(255,255,255,0.5);
-    border-bottom: 2px solid red;
+    //border-bottom: 2px solid #10FF00;
+    box-shadow: 0 0 10px 0px rgba(0,0,0,0.7);
+}
+.danger_field{
+    width: 100%;
+    height: 10px;
+    background-image: url("line.png");
     box-shadow: 0 0 10px 0px rgba(0,0,0,0.7);
 }
 .myhide{
@@ -126,6 +133,8 @@ body{
     font-weight: bold;
     line-height: 32px;
     font-size: 130%;
+    color: orange;
+    text-shadow: 0 0 10px orange;
 }
 #loginform{
     padding: 10px;
@@ -162,18 +171,18 @@ body{
     margin-bottom: 5px;
     cursor: pointer;
 }
-.user_card{
+.user_card {
     margin-top: 5px;
-    border: 2px white outset;
+    border: 1px #FFA500 solid;
     padding-left: 0px;
     padding-right: 0px;
-    border-radius: 5px;
+    /* border-radius: 5px; */
     box-shadow: 0 0 10px 0px rgba(0,0,0,0.4);
-    background: #4c4c4c; /* Old browsers */
-    background: -moz-linear-gradient(top, #4c4c4c 0%, #595959 12%, #666666 25%, #474747 39%, #2c2c2c 50%, #000000 51%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, #4c4c4c 0%,#595959 12%,#666666 25%,#474747 39%,#2c2c2c 50%,#000000 51%,#111111 60%,#2b2b2b 76%,#1c1c1c 91%,#131313 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, #4c4c4c 0%,#595959 12%,#666666 25%,#474747 39%,#2c2c2c 50%,#000000 51%,#111111 60%,#2b2b2b 76%,#1c1c1c 91%,#131313 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313',GradientType=0 ); /* IE6-9 */
+    background: #4c4c4c;
+    background: -moz-linear-gradient(top, #4c4c4c 0%, #595959 12%, #666666 25%, #474747 39%, #2c2c2c 50%, #000000 51%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
+    background: -webkit-linear-gradient(top, #4c4c4c 0%,#595959 12%,#666666 25%,#474747 39%,#2c2c2c 50%,#000000 51%,#111111 60%,#2b2b2b 76%,#1c1c1c 91%,#131313 100%);
+    background: linear-gradient(to bottom, #4c4c4c 0%,#595959 12%,#666666 25%,#474747 39%,#2c2c2c 50%,#000000 51%,#111111 60%,#2b2b2b 76%,#1c1c1c 91%,#131313 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313',GradientType=0 );
 }
 .user_card_photo{
     height: 50px;
@@ -181,7 +190,7 @@ body{
     margin-right: 5px;
     background: url("/style/nophoto.png") no-repeat center;
     background-size: cover;
-    box-shadow: 0 0 5px 3px rgba(250,250,250,0.8);
+    box-shadow: 0 0 10px 1px #f0ad4e;
 }
 
 .user_card_desc{
@@ -405,6 +414,10 @@ h3.card_status_off{
 #trend {	
     display: none;
     transition:opacity 1s ease;
+}
+.wind_rose_trend{
+    height: 366px;
+    display: none;
 }
 .transparent{
     opacity:0;
