wind analytics and private user map added/ some bugs undermined

--- a/components/menuadmin.html
+++ b/components/menuadmin.html
@@ -3,5 +3,6 @@
     <button class="btn btn-default disabled hidden">Обновить список</button>
     <button class="btn btn-default disabled hidden">Анализ списка</button>
     <button class="btn btn-default btn-privatelog">Лог посещений</button>
+    <button class="btn btn-warning btn-hgmap">Карта HG</button>
     <button class="btnadmintools btn btn-danger">AdminTools</button>
 </div>
