theme, push mobile fixed, serviceworker added

--- a/style/dark.css
+++ b/style/dark.css
@@ -1,4 +1,4 @@
-@import "http://webfonts.ru/import/gardensc.css";
+@import "/style/garden/gardensc.css";
 
 .headerdark{
     background-color: #313131;
