some bugs fixed

--- a/components/addmc.html
+++ b/components/addmc.html
@@ -1,5 +1,9 @@
 <header>Добавление монстра</header>
-<div class="idlabel">test</div>
+
+<span class="addmclabel" id="addmcLat">---</span>
+<span class="addmclabel" id="addmcLng">---</span>
+<span class="addmclabel" id="addmcId">Координаты твари:</span>
+
 <form class="form-horizontal">
     <div id="addmc_left" class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
         <div class="form-group">
@@ -58,13 +62,13 @@
                 <div class="col-sm-12" id="mc_wind_speed"></div>
             </div>
         </div>
-        <div class="form-group">
-            <span class="control-label col-sm-3">Направление:</span>
-            <div class="col-sm-9">
-                <input type="text" readonly id="mc_direction_val" class="form-control">
-                <div class="col-sm-12" id="mc_direction"></div>
-            </div>
-        </div>
+        <!--<div class="form-group">-->
+            <!--<span class="control-label col-sm-3">Направление:</span>-->
+            <!--<div class="col-sm-9">-->
+                <!--<input type="text" readonly id="mc_direction_val" class="form-control">-->
+                <!--<div class="col-sm-12" id="mc_direction"></div>-->
+            <!--</div>-->
+        <!--</div>-->
     </div>
 </form>
 <form class="form-horizontal">
@@ -80,13 +84,13 @@
                 <div class="col-sm-12" id="mc_speed"></div>
             </div>
         </div>
-        <div class="form-group">
-            <span class="control-label col-sm-3">Расстояние:</span>
-            <div class="col-sm-9">
-                <input type="text" readonly id="mc_distance_val" class="form-control">
-                <div class="col-sm-12" id="mc_distance"></div>
-            </div>
-        </div>
+        <!--<div class="form-group">-->
+            <!--<span class="control-label col-sm-3">Расстояние:</span>-->
+            <!--<div class="col-sm-9">-->
+                <!--<input type="text" readonly id="mc_distance_val" class="form-control">-->
+                <!--<div class="col-sm-12" id="mc_distance"></div>-->
+            <!--</div>-->
+        <!--</div>-->
         <div class="form-group">
             <span class="control-label col-sm-3">Воскрешение:</span>
             <div class="col-sm-9">
@@ -102,25 +106,15 @@
         <button class="btn btn-success btn-block disabled"><span class="fa fa-lg fa-fw fa-sun-o"></span>Солнечно</button>
         <button class="btn btn-danger btn-block disabled"><span class="fa fa-lg fa-fw fa-bolt"></span>Гроза</button>
         <button class="btn btn-danger btn-block disabled"><span class="fa fa-lg fa-fw fa-heartbeat"></span>Страх</button>
-        <button class="btn btn-success btn-block disabled"><span class="fa fa-lg fa-fw fa-bus"></span>На автобусе</button>
-        <button class="btn btn-warning btn-block disabled"><span class="fa fa-lg fa-fw fa-calendar"></span>Дела</button>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
         <button class="btn btn-success btn-block disabled"><span class="fa fa-lg fa-fw fa-cloud"></span>Облачно</button>
         <button class="btn btn-danger btn-block disabled"><span class="fa fa-lg fa-fw fa-soundcloud"></span>Туман</button>
         <button class="btn btn-success btn-block disabled"><span class="fa fa-lg fa-fw fa-home"></span>Дома</button>
-        <button class="btn btn-warning btn-block disabled"><span class="fa fa-lg fa-fw fa-cab"></span>На такси</button>
-        <button class="btn btn-success btn-block disabled"><span class="fa fa-lg fa-fw fa-commenting"></span>Свободен</button>
     </div>
     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 text-center">
         <button class="btn btn-warning btn-block disabled"><span class="fa fa-lg fa-fw fa-deaf"></span>Шумно</button>
         <button class="btn btn-danger btn-block disabled"><span class="fa fa-lg fa-fw fa-asterisk"></span>Снег</button>
         <button class="btn btn-warning btn-block disabled"><span class="fa fa-lg fa-fw fa-car"></span>На машине</button>
-        <button class="btn btn-warning btn-block disabled"><span class="fa fa-lg fa-fw fa-map"></span>В поездке</button>
-        <button class="btn btn-success btn-block disabled"><span class="fa fa-lg fa-fw fa-cutlery"></span>Ем</button>
     </div>
-</div>
-<div class="col-xs-12 text-center">
-    <button id="mc_btnsub" class="btn btn-success btn-group-sm">Добавить</button>
-    <button id="mc_btncancel" class="btn btn-danger btn-group-sm">Отмена</button>
 </div>
