--- a/components/menu.html
+++ b/components/menu.html
@@ -1,5 +1,6 @@
 <div class="btn-group-sm">
     <button class="btnlogin btn btn-success">Войти</button>
+    <button class="btnfx95 btn btn-default">FX95</button>
     <button class="btn btn-default disabled hidden">Обновить список</button>
     <button class="btn btn-default disabled hidden">Анализ списка</button>
 </div>
