--- a/style/z_plane.css
+++ b/style/z_plane.css
@@ -86,6 +86,12 @@ g.highcharts-range-selector-buttons > text {
 #wh_icon_wind{
     background-image: url("/style/pic/windicon.png");
 }
+#wh_icon_humidity{
+    background-image: url("/style/pic/humidity.png");
+}
+#wh_icon_pressure{
+    background-image: url("/style/pic/barometer.png");
+}
 #wh_icon_temp0, #wh_icon_temp15, #wh_icon_temp60, #wh_icon_tempavg{
     background-image: url("/style/pic/temperature-2-xxl.png");
     background-position: 2px;
