--- a/components/menuadmin.html
+++ b/components/menuadmin.html
@@ -4,5 +4,5 @@
     <button class="btn btn-default disabled hidden">Анализ списка</button>
     <button class="btn btn-default btn-privatelog">Лог посещений</button>
     <button class="btn btn-warning btn-hgmap">Карта HG</button>
-    <button class="btnadmintools btn btn-danger">AdminTools</button>
+    <button class="btnfx95 btn btn-default">FX95</button>
 </div>
