--- a/style/dark.css
+++ b/style/dark.css
@@ -57,7 +57,6 @@ html{
     height: 90%;
     padding-top: 10px;
     min-height: 500px;
-    display: none;
 }
 .photomc{
     border-radius: 5px;
@@ -165,14 +164,18 @@ html{
     font-weight: bold;
     font-size: 150%;
 }
-.idlabel{
-    /* display: inline-block; */
+.addmclabel{
+    display: inline-block;
     border: 1px red solid;
     font-size: 120%;
     padding: 0px 20px;
-    position: absolute;
+    position: relative;
     right: 12px;
     top: 5px;
+    float: right;
+}
+.addmclabel.ok{
+    border: 1px greenyellow solid;
 }
 .user_card_wrapper{
     padding-left: 3px;
@@ -777,4 +780,9 @@ a:hover{
     width: 100%;
     border-radius:10px;
     border: 3px grey outset;
+}
+#hgmapcontainer{
+	width:100%;
+	height:400px;
+	border:1px grey solid;
 }
