--- a/components/addmc.html
+++ b/components/addmc.html
@@ -1,8 +1,8 @@
 <header>Добавление монстра</header>
-
+<div>Координаты твари:</div>
 <span class="addmclabel" id="addmcLat">---</span>
 <span class="addmclabel" id="addmcLng">---</span>
-<span class="addmclabel" id="addmcId">Координаты твари:</span>
+
 
 <form class="form-horizontal">
     <div id="addmc_left" class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
