--- a/components/menupdaadmin.html
+++ b/components/menupdaadmin.html
@@ -2,4 +2,4 @@
 <button class="btn btn-default btn-block disabled hidden">Обновить список</button>
 <button class="btn btn-default btn-block disabled hidden">Анализ списка</button>
 <button class="btn btn-default btn-privatelog">Лог посещений</button>
-<button class="btnadmintools btn btn-danger btn-block">AdminTools</button>
+<button class="btn btn-warning btn-hgmap">Карта HG</button>
