--- a/components/menuadmin.html
+++ b/components/menuadmin.html
@@ -2,7 +2,7 @@
     <button class="btnlogout btn btn-default">Выйти</button>
     <button class="btn btn-default disabled hidden">Обновить список</button>
     <button class="btn btn-default disabled hidden">Анализ списка</button>
-    <button class="btn btn-default btn-privatelog">Лог посещений</button>
+    <button class="btn btn-default btn-privatelog disabled">Лог посещений</button>
     <button class="btn btn-warning btn-hgmap">Карта HG</button>
-    <button class="btnfx95 btn btn-default">FX95</button>
+    <button class="btnfx95 btn btn-default hidden">FX95</button>
 </div>
