--- a/style/dark.css
+++ b/style/dark.css
@@ -136,13 +136,25 @@ html{
 #menu{
     margin-bottom: 10px;
 }
+@keyframes logo {
+    0%{transform: rotateX(0deg);}
+    5%{transform: rotateX(360deg);}
+    100%{transform: rotateX(360deg);}
+}
 .logo{
+    transform-style: preserve-3d;
+    transform-origin: center;
     margin-top: 15px;
     font-weight: bold;
     line-height: 32px;
     font-size: 130%;
     color: orange;
     text-shadow: 0 0 10px orange;
+    animation: logo;
+    animation-delay: 10s;
+    animation-duration: 20s;
+    animation-iteration-count: infinite;
+
 }
 #loginform{
     padding: 10px;
@@ -188,7 +200,7 @@ html{
     border: 1px #FFA500 solid;
     padding-left: 0px;
     padding-right: 0px;
-    /* border-radius: 5px; */
+    border-radius: 10px;
     box-shadow: 0 0 10px 0px rgba(0,0,0,0.4);
     background: #4c4c4c;
     background: -moz-linear-gradient(top, #4c4c4c 0%, #595959 12%, #666666 25%, #474747 39%, #2c2c2c 50%, #000000 51%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
@@ -199,10 +211,11 @@ html{
 .user_card_photo{
     height: 50px;
     width: 50px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px 1px rgba(255,200,0,0.7);
     margin-right: 5px;
     background: url("/style/nophoto.png") no-repeat center;
     background-size: cover;
-    box-shadow: 0 0 10px 1px #f0ad4e;
 }
 
 .user_card_desc{
@@ -452,6 +465,7 @@ h3.card_status_off{
     text-align: center;
     font-size: 80%;
     color: white;
+    border-radius: 0 0 7px 7px;
 }
 .beenonline{
     font-size: 11px;
@@ -785,4 +799,16 @@ a:hover{
 	width:100%;
 	height:400px;
 	border:1px grey solid;
+}
+.mc_lat{
+    font-size: 0.7rem;
+}
+.mc_lng{
+    font-size: 0.7rem;
+}
+.mc_lat .value{
+    color: orange;
+}
+.mc_lng .value{
+    color: orange;
 }
