--- a/style/dark.css
+++ b/style/dark.css
@@ -72,7 +72,6 @@ html{
     text-align: center;
     font-size: 120%;
     font-weight: bold;
-    border: 1px solid grey;
     background-color: #ccc;
     color: red;
 }
@@ -92,16 +91,16 @@ html{
 .activemc,.statusmc,.descriptionmc,.namemc{
     width: 100% !important;
     text-align: center;
-    font-size: 120%;
-    font-weight: bold;
     border: 1px solid grey;
     background-color: #ccc;
-    color: red;
+}
+.monster .panel-body{
+    display: none;
 }
 @media (max-width: 768px) {
     .descriptionmc{
-        min-height: 150px;
-        max-height: 150px;
+        /*min-height: 150px;*/
+        /*max-height: 150px;*/
     }
 }
 @media (min-width:768px) and (max-width: 992px) {
@@ -192,27 +191,24 @@ html{
 .user_card_wrapper{
     padding-left: 3px;
     padding-right: 3px;
-    margin-bottom: 5px;
     cursor: pointer;
 }
 .user_card {
-    margin-top: 5px;
-    border: 1px #FFA500 solid;
+    height: 100%;
+    border-right: 1px #888 solid;
     padding-left: 0px;
     padding-right: 0px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px 0px rgba(0,0,0,0.4);
+    box-shadow: 10px 0 20px 0px rgba(200,200,200,0.2);
     background: #4c4c4c;
-    background: -moz-linear-gradient(top, #4c4c4c 0%, #595959 12%, #666666 25%, #474747 39%, #2c2c2c 50%, #000000 51%, #111111 60%, #2b2b2b 76%, #1c1c1c 91%, #131313 100%);
-    background: -webkit-linear-gradient(top, #4c4c4c 0%,#595959 12%,#666666 25%,#474747 39%,#2c2c2c 50%,#000000 51%,#111111 60%,#2b2b2b 76%,#1c1c1c 91%,#131313 100%);
-    background: linear-gradient(to bottom, #4c4c4c 0%,#595959 12%,#666666 25%,#474747 39%,#2c2c2c 50%,#000000 51%,#111111 60%,#2b2b2b 76%,#1c1c1c 91%,#131313 100%);
+    background: -moz-linear-gradient(top, #777 0%,#444 30%,#000000 100%);
+    background: -webkit-linear-gradient(top, #777 0%,#444 30%,#000000 100%);
+    background: linear-gradient(to bottom, #777 0%,#444 30%,#000000 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313',GradientType=0 );
 }
 .user_card_photo{
     height: 50px;
     width: 50px;
-    border-radius: 10px;
-    box-shadow: 0 0 10px 1px rgba(255,200,0,0.7);
+    box-shadow: 2px 2px 10px 0 rgba(200,200,200,0.4);
     margin-right: 5px;
     background: url("/style/nophoto.png") no-repeat center;
     background-size: cover;
@@ -465,8 +461,19 @@ h3.card_status_off{
     text-align: center;
     font-size: 80%;
     color: white;
-    border-radius: 0 0 7px 7px;
+    border-radius: 0 0 3px 3px;
+    position: absolute;
+    bottom: -15px;
+    width: 98%;
+    box-shadow: 0 0 10px 1px rgba(0,0,0,0.7);
+    background-color: #333;
 }
+#widget_weather .code_msg{
+    width: 95%;
+    box-shadow: 0 0 10px 1px rgba(0,0,0,0.7);
+    background-color: #555;
+}
+
 .beenonline{
     font-size: 11px;
     color: #aaa;
