--- a/components/news/style.css
+++ b/components/news/style.css
@@ -75,7 +75,18 @@
     padding: 2%;
     border-radius: 10px;
     margin: 20px 10px;
+    display: none;
 }
 img{
     box-shadow: 2px 2px 10px 0 rgba(0,0,0,0.3);
+}
+#newsImgFile{
+    height: 200px;
+    border: 2px grey solid;
+    display: block;
+    margin: 0 auto;
+    top: 0;
+    width: 200px;
+    margin-top: -200px;
+    opacity: 0;
 }
