--- a/components/news/style.css
+++ b/components/news/style.css
@@ -17,6 +17,7 @@
     background-color: #DDD;
     border-radius: 5px;
     box-shadow: 0 5px 20px 1px rgba(0,0,0,0.5);
+    transition: all 0.5s ease;
 }
 .newsAuthorImg{
     width: 30px;
@@ -36,6 +37,8 @@
     max-height: 200px;
     box-shadow: 5px 0 20px 0 rgba(0,0,0,0.5);
     z-index: 1000;
+    max-width: 100%;
+    /*width: 100%;*/
 }
 .newsBody{
     /* height: 170px; */
@@ -79,6 +82,7 @@
 }
 img{
     box-shadow: 2px 2px 10px 0 rgba(0,0,0,0.3);
+    transition: all 0.5s ease;
 }
 #newsImgFile{
     height: 200px;
@@ -89,4 +93,7 @@ img{
     width: 200px;
     margin-top: -200px;
     opacity: 0;
+}
+.newsAddBlock{
+    display: none;
 }
